--- a/settings.gradle
+++ b/settings.gradle
@@ -4,9 +4,9 @@ include ':app'
 include ':Android_LIB_Commons'
 include ':Android_LIB_CommonsAds'
 include ':Android_LIB_Commons2D'
-include ':Android_LIB_2DGravity'
+include ':Android_APP_2DGravity'
 
 project(':Android_LIB_Commons').projectDir = new File('./../Android_LIB_Commons/app')
 project(':Android_LIB_CommonsAds').projectDir = new File('./../Android_LIB_CommonsAds/app')
 project(':Android_LIB_Commons2D').projectDir = new File('./../Android_LIB_Commons2D/app')
-project(':Android_LIB_2DGravity').projectDir = new File('./../Android_LIB_2DGravity/app')
+project(':Android_APP_2DGravity').projectDir = new File('./../Android_APP_2DGravity/app')
