--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,17 +32,17 @@
         android:icon="@drawable/ic_logo_gravity"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="com.gravityplay.app.Application_2DGravity">
+        android:name="org.metatrans.apps.gravity.app.Application_2DGravity">
 
         <activity
-            android:name="com.apps.mobile.android.commons.web.Activity_WebView_StatePreservingImpl_With_VideoPlayer"
+            android:name="org.metatrans.commons.web.Activity_WebView_StatePreservingImpl_With_VideoPlayer"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
             android:hardwareAccelerated="true"
             android:theme="@style/AppTheme"/>
 
 
         <activity
-            android:name="com.gravityplay.main.Activity_Main_Gravity"
+            android:name="org.metatrans.apps.gravity.main.Activity_Main_Gravity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:hardwareAccelerated="true"
@@ -55,7 +55,7 @@
 
 
         <activity
-            android:name="com.gravityplay.main.Activity_Result"
+            android:name="org.metatrans.apps.gravity.main.Activity_Result"
             android:icon="@drawable/ic_colours_tube"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -66,7 +66,7 @@
 
 
         <activity
-            android:name="com.gravityplay.menu.Activity_Menu_Levels"
+            android:name="org.metatrans.apps.gravity.menu.Activity_Menu_Levels"
             android:icon="@drawable/ic_rainbow"
             android:label="@string/levels"
             android:theme="@style/AppBaseTheme">
@@ -78,7 +78,7 @@
 
 
         <activity
-            android:name="com.gravityplay.menu.Activity_Menu_Main"
+            android:name="org.metatrans.apps.gravity.menu.Activity_Menu_Main"
             android:label="@string/menu_main"
             android:theme="@style/AppBaseTheme" >
             <intent-filter>
@@ -89,7 +89,7 @@
 
 
         <activity
-            android:name="com.apps.mobile.android.commons.marketing.Activity_Marketing_AppList"
+            android:name="org.metatrans.commons.marketing.Activity_Marketing_AppList"
             android:icon="@drawable/ic_colours_tube"
             android:label="@string/label_moregames"
             android:theme="@style/AppBaseTheme">
@@ -101,7 +101,7 @@
 
 
         <activity
-            android:name="com.apps.mobile.android.commons.menu.Activity_Menu_Colours_Base"
+            android:name="org.metatrans.commons.menu.Activity_Menu_Colours_Base"
             android:icon="@drawable/ic_rainbow"
             android:label="@string/menu_colour_scheme"
             android:theme="@style/AppBaseTheme">
@@ -113,7 +113,7 @@
 
 
         <activity
-            android:name="com.apps.mobile.android.commons.engagement.achievements.Activity_Achievements_Base"
+            android:name="org.metatrans.commons.engagement.achievements.Activity_Achievements_Base"
             android:icon="@drawable/ic_achievements"
             android:label="@string/achievements"
             android:theme="@style/AppBaseTheme">
@@ -125,7 +125,7 @@
 
 
         <activity
-            android:name="com.apps.mobile.android.commons.engagement.achievements.Activity_Picture"
+            android:name="org.metatrans.commons.engagement.achievements.Activity_Picture"
             android:icon="@drawable/ic_achievements"
             android:label="@string/achievement"
             android:theme="@style/AppBaseTheme">
@@ -137,7 +137,7 @@
 
 
         <activity
-            android:name="com.gravityplay.loading.Activity_Loading"
+            android:name="org.metatrans.apps.gravity.loading.Activity_Loading"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
