--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gravityplay"
     android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -45,7 +44,8 @@
             android:name="org.metatrans.apps.gravity.main.Activity_Main_Gravity"
             android:screenOrientation="landscape"
             android:hardwareAccelerated="true"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -56,7 +56,8 @@
         <activity
             android:name="org.metatrans.apps.gravity.main.Activity_Result"
             android:icon="@drawable/ic_colours_tube"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -68,7 +69,20 @@
             android:name="org.metatrans.apps.gravity.menu.Activity_Menu_Levels"
             android:icon="@drawable/ic_rainbow"
             android:label="@string/levels"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name="org.metatrans.apps.gravity.menu.Activity_Menu_SpaceObjects"
+            android:label="@string/space_objects"
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -79,7 +93,8 @@
         <activity
             android:name="org.metatrans.apps.gravity.menu.Activity_Menu_Main"
             android:label="@string/menu_main"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -91,7 +106,8 @@
             android:name="org.metatrans.commons.marketing.Activity_Marketing_AppList"
             android:icon="@drawable/ic_colours_tube"
             android:label="@string/label_moregames"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -103,7 +119,8 @@
             android:name="org.metatrans.commons.menu.Activity_Menu_Colours_Base"
             android:icon="@drawable/ic_rainbow"
             android:label="@string/menu_colour_scheme"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -115,7 +132,8 @@
             android:name="org.metatrans.commons.engagement.achievements.Activity_Achievements_Base"
             android:icon="@drawable/ic_achievements"
             android:label="@string/achievements"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -127,7 +145,8 @@
             android:name="org.metatrans.commons.engagement.achievements.Activity_Picture"
             android:icon="@drawable/ic_achievements"
             android:label="@string/achievement"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -136,7 +155,8 @@
 
 
         <activity
-            android:name="org.metatrans.apps.gravity.loading.Activity_Loading">
+            android:name="org.metatrans.apps.gravity.loading.Activity_Loading"
+            android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
