--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
     <application
         android:allowBackup="true"
+        android:largeHeap="true"
         android:icon="@drawable/ic_logo_gravity"
         android:label="@string/app_gravity_name"
         android:theme="@style/AppTheme"
